--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     
 
-    <p>left or right</p>
-    <img class="leftRight" src="leftRight.png">
-    <img class="pizza" src="pizza.jpg">
+    <p>which place to live?</p>
+    <img class="PlanetA" src="planet-early-with-moon.avif">
+    <img class="Pluto" src="ap342635157425-dac6f2bf1e6d641a8a281c065855751a4570a2d2.jpg">
     <button class="left"> left</button>
     <button class="right"> right</button>
 
