--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <p>which place to live?</p>
     <img class="PlanetA" src="planet-early-with-moon.avif">
     <img class="Pluto" src="ap342635157425-dac6f2bf1e6d641a8a281c065855751a4570a2d2.jpg">
+    <img class="badplanet" src="bad planet.jpg">
+<img class="badalien" src="bad ailen.jpg">
+<img class="goodalien" src="good alien.png">
+
     <button class="left"> left</button>
     <button class="right"> right</button>
 
